# kalshi_bot

./: README.md
backend/: config.yaml  pyproject.toml
backend/sandbox/: playground.py
backend/src/bot/: __init__.py
backend/src/bot/config/: __init__.py  settings.py
backend/src/bot/core/: __init__.py  interfaces.py  models.py
backend/src/bot/data/: __init__.py  feed_mock.py  feed_rest.py  feed_ws.py  http_client.py  parser.py
backend/src/bot/execution/: __init__.py  convert.py  kalshi.py  paper.py
backend/src/bot/logging/: __init__.py  logger.py
backend/src/bot/state/: __init__.py  store.py
backend/src/kalshi_bot/: main.py
backend/src/kalshi_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
